--- a/src/extras/bio/Makefile
+++ b/src/extras/bio/Makefile
@@ -1,4 +1,4 @@
-#$Id: Makefile,v 1.3 2003-09-16 12:11:24 hb Exp $
+#$Id: Makefile,v 1.4 2003-10-16 15:42:16 kbk Exp $
 #
 # Makefile to build the Bio Module - libbio.a
 #
@@ -18,6 +18,7 @@ ${LIB}(bio_iow.o)		\
 ${LIB}(process_model.o)		\
 ${LIB}(ode_solvers.o)		\
 ${LIB}(bio_save.o)		\
+${LIB}(mussels.o)		\
 ${LIB}(bio.o)
 
 all: ${OBJ}
