--- a/src/extras/bio/Makefile
+++ b/src/extras/bio/Makefile
@@ -1,4 +1,4 @@
-#$Id: Makefile,v 1.4 2003-10-16 15:42:16 kbk Exp $
+#$Id: Makefile,v 1.5 2003-10-28 10:22:45 hb Exp $
 #
 # Makefile to build the Bio Module - libbio.a
 #
@@ -8,6 +8,7 @@ include ../../Rules.make
 LIB	= $(LIBDIR)/libbio$(buildtype).a
 
 DOCSRC	= bio.F90 bio_var.F90 bio_template.F90 bio_npzd.F90 bio_iow.F90 \
+          bio_sed.F90 \
           process_model.F90 ode_solvers.F90 bio_save.F90
 
 OBJ   = \
@@ -15,6 +16,7 @@ ${LIB}(bio_var.o)		\
 ${LIB}(bio_template.o)		\
 ${LIB}(bio_npzd.o)		\
 ${LIB}(bio_iow.o)		\
+${LIB}(bio_sed.o)		\
 ${LIB}(process_model.o)		\
 ${LIB}(ode_solvers.o)		\
 ${LIB}(bio_save.o)		\
