--- a/src/extras/bio/Makefile
+++ b/src/extras/bio/Makefile
@@ -1,4 +1,4 @@
-#$Id: Makefile,v 1.7 2004-01-12 08:50:25 lars Exp $
+#$Id: Makefile,v 1.8 2004-06-29 08:03:16 hb Exp $
 #
 # Makefile to build the Bio Module - libbio.a
 #
@@ -19,6 +19,7 @@ ${LIB}(bio_var.o)		\
 ${LIB}(bio_template.o)		\
 ${LIB}(bio_npzd.o)		\
 ${LIB}(bio_iow.o)		\
+${LIB}(bio_fasham.o)		\
 ${LIB}(bio_sed.o)		\
 ${LIB}(process_model.o)		\
 ${LIB}(ode_solvers.o)		\
