--- a/src/extras/bio/Makefile
+++ b/src/extras/bio/Makefile
@@ -1,4 +1,4 @@
-#$Id: Makefile,v 1.9 2004-07-29 17:36:37 hb Exp $
+#$Id: Makefile,v 1.10 2005-12-02 20:57:27 hb Exp $
 #
 # Makefile to build the Bio Module - libbio.a
 #
@@ -7,10 +7,10 @@ include ../../Rules.make
 
 LIB	= $(LIBDIR)/libbio$(buildtype).a
 
-DOCSRC	=  bio.F90 
-#bio_var.F90 bio_template.F90 bio_npzd.F90 bio_iow.F90 \
-#          bio_sed.F90 \
-#          process_model.F90 ode_solvers.F90 bio_save.F90
+DOCSRC	=  bio.F90 \
+bio_var.F90 bio_template.F90 bio_npzd.F90 bio_iow.F90 \
+          bio_sed.F90 bio_fasham.F90 \
+          process_model.F90 ode_solvers.F90 bio_save.F90
 
 # commented out, because protex does not compile (lars)
 
