--- a/src/extras/bio/Makefile
+++ b/src/extras/bio/Makefile
@@ -1,4 +1,4 @@
-#$Id: Makefile,v 1.18 2008-02-20 11:29:59 kb Exp $
+#$Id: Makefile,v 1.19 2008-03-26 08:56:52 kb Exp $
 #
 # Makefile to build the Bio Module - libbio.a
 #
@@ -8,31 +8,67 @@ include ../../Rules.make
 LIB	= $(LIBDIR)/libbio$(buildtype).a
 
 DOCSRC	=  bio.F90 \
-bio_var.F90 bio_template.F90 bio_npzd.F90 bio_iow.F90 \
-          bio_sed.F90 bio_fasham.F90 bio_rolm.F90 \
-          bio_npzd_fe.F90 bio_save.F90 \
-#         mussels.F90 mussel_deb.F90
+           bio_var.F90 \
+           bio_fluxes.F90 \
+           bio_save.F90
 
-OBJ   = \
+OBJ1   = \
 ${LIB}(bio_var.o)		\
 ${LIB}(bio_fluxes.o)		\
-${LIB}(bio_template.o)		\
-${LIB}(bio_npzd.o)		\
-${LIB}(bio_iow.o)		\
-${LIB}(bio_mab.o)		\
-${LIB}(bio_fasham.o)		\
-${LIB}(bio_sed.o)		\
-${LIB}(bio_rolm.o)		\
-${LIB}(bio_npzd_fe.o)           \
-${LIB}(bio_save.o)		\
+${LIB}(bio_save.o)
+
+OBJ2   = \
 ${LIB}(bio.o)
 
-#${LIB}(mussels.o)		\
-#${LIB}(mussel_deb.o)		\
+ifneq ($(BIO_TEMPLATE),false)
+SUBDIRS += template
+DEFINES += -DBIO_TEMPLATE
+endif
 
+ifneq ($(BIO_NPZD),false)
+SUBDIRS += npzd
+DEFINES += -DBIO_NPZD
+endif
 
-all: ${OBJ}
+ifneq ($(BIO_IOW),false)
+SUBDIRS += iow
+DEFINES += -DBIO_IOW
+endif
+
+ifneq ($(BIO_SED),false)
+SUBDIRS += sed
+DEFINES += -DBIO_SED
+endif
+
+ifneq ($(BIO_FASHAM),false)
+SUBDIRS += fasham
+DEFINES += -DBIO_FASHAM
+endif
+
+ifneq ($(BIO_MAB),false)
+SUBDIRS += mab
+DEFINES += -DBIO_MAB
+endif
+
+ifneq ($(BIO_ROLM),false)
+SUBDIRS += rolm
+DEFINES += -DBIO_ROLM
+endif
+
+ifneq ($(BIO_NPZD_FE),false)
+SUBDIRS += npzd_fe
+DEFINES += -DBIO_NPZD_FE
+endif
+
+all: configure $(OBJ1) OBJS $(OBJ2)
 	$(MOVE_MODULES_COMMAND)
+
+configure: BIO_MODELS.sh
+	./BIO_MODELS.sh
+	touch bio.F90
+
+OBJS: $(SUBDIRS)
+	set -e; for i in $(SUBDIRS); do $(MAKE) -C $$i ; done
 
 doc:    $(DOCSRC)
 	$(PROTEX) $(DOCSRC) > ../../../doc/bio.tex 
@@ -47,5 +83,5 @@ realclean: clean
 distclean: realclean
 
 #-----------------------------------------------------------------------
-# Copyright (C) 2003 - Hans Burchard and Karsten Bolding (BBH)         !
+# Copyright (C) 2008 - Hans Burchard and Karsten Bolding (BBH)         !
 #-----------------------------------------------------------------------
